Added dateTimeConvert to query benchmark. Slightly optimized benchmark to support bigger datasets. Fixed TimePredicateFilterOptimizer failing queries due to unexpected number of function arguments. Added tests.